<?xml version="1.0" encoding="utf-8"?>
<resources>    
    <string name="app_name"> Bluetooth Diagnostics</string>
    
    <!-- BLUNO strings -->
    <string name="error_bluetooth_not_supported">BLE Not Supporteds</string>
    <string name="ble_not_supported">BLE Not Supporteds</string>
    <string name="unknown_device">Unknown device</string>
    
    <!-- Main Menu -->
    <string name="current_user">	Current User</string>
    <string name="manage_accounts">	Manage Accounts</string>
	<string name="riding_history">	Riding History</string>
    <string name="start_new_ride">	Start New Ride</string>
    
    <!-- New Ride -->
    <string name="distance">		Distance:</string>
    <string name="speed">			Speed:</string>
    <string name="rpm">				RPM:</string>
    <string name="heart_rate">		Heart Rate:</string>
    <string name="tire_pressure">	Tire Pressure:</string>
    <string name="gradient">		Gradient</string>
    
    
    <string name="end_ride"> End Ride</string>
    
    
    
    
    <!-- Manage Accounts Menu -->
    <string name="switch_account">	Switch Account</string>
	<string name="edit_account">	Edit Account</string>
    <string name="create_account">	Create Account</string>
    
    <!-- Activity Names -->
    <string name="manage_accounts_activity_name">	@string/manage_accounts</string>
    <string name="riding_history_activity_name">	@string/riding_history</string>
    <string name="new_ride_activity_name">			Riding Display</string>
    
    <!-- Dialog Text -->
    <string name="dialog_username">		Username</string>
    <string name="dialog_age">			Age</string>
    <string name="dialog_weight">		Weight (lbs.)</string>
    <string name="dialog_wheel">		Wheel Diameter (in.)</string>
    <string name="account_required">	An account is required. Press confirm to make one or exit to exit the application.</string>
    <string name="select_account">		Select Account</string>
    <string name="select_ride">			Select Ride</string>
    <string name="confirm_end_ride">    Would you like to exit the current session? (data is automatically saved)</string>

    <!-- Dialog Buttons -->
    <string name="save">			Save</string>
    <string name="cancel">			Cancel</string>
    <string name="exit">			Exit</string>
    <string name="confirm">			Confirm</string>
    <string name="send_message">	Send</string>
    <string name="delete_account">	Delete Account</string>
    <string name="yes">             Yes</string>
    <string name="no">              No</string>
    
    <!-- Bluno -->
    <string name="connected">Connected</string>
    <string name="Disconnected">Disconnected</string>
</resources>