<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/dialog_root_vertical"> 
    
    <!-- Need Name, Weight, Age, Wheel Diameter
    Weight and Age used for calories burned
    Wheel diameter for distance/rpm -->
    
    <TextView
        android:id="@+id/dialog_title"
	    style="@style/dialog_title"
	    android:text="@string/create_account"/>	
	<RelativeLayout 
	    style="@style/dialog_root"
	    android:layout_width="match_parent">
	    <EditText
	        android:id="@+id/dialog_username"
	        style="@style/dialog_edit_text" 
	        android:layout_alignParentTop="true"
	        android:inputType="textPersonName"
	        android:hint="@string/dialog_username"/>
	    <EditText
	        android:id="@+id/dialog_weight"
	        style="@style/dialog_edit_text"
	        android:layout_below="@id/dialog_username"
			android:inputType="number"
	        android:hint="@string/dialog_weight"/>
	    <EditText
	        android:id="@+id/dialog_age"
	        style="@style/dialog_edit_text"
	        android:layout_below="@id/dialog_weight"
	        android:inputType="number"
	        android:hint="@string/dialog_age"/>
	    <EditText
	        android:id="@+id/dialog_wheel"
	        style="@style/dialog_edit_text"
	        android:layout_below="@id/dialog_age"
	        android:inputType="number"
	        android:hint="@string/dialog_wheel"/>
	    <!-- Save data to file associated with user -->
	   	<Button
	        style="@style/dialog_button"
	        android:layout_below="@id/dialog_wheel"
	        android:layout_width="match_parent"
	        android:text="@string/save"
	        android:onClick="saveAccountClick"/>
	</RelativeLayout>
</LinearLayout>