<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"> 
    
    <!-- Need Name, Weight, Age, Wheel Diameter
    Weight and Age used for calories burned
    Wheel diameter for distance/rpm -->
    
    <EditText
        style="@style/dialog"
        android:id="@+id/dialog_username"
        android:hint="@string/dialog_username"
        />
    <EditText
        style="@style/dialog"
        android:id="@+id/dialog_weight"
        android:inputType="textPersonName"
        android:hint="@string/dialog_weight"
        />
    <EditText
        style="@style/dialog"
        android:id="@+id/dialog_age"
        android:inputType="number"
        android:hint="@string/dialog_age"
        />
    <EditText
        style="@style/dialog"
        android:id="@+id/dialog_wheel"
        android:inputType="number"
        android:hint="@string/dialog_wheel"
        />
    <!-- Save data to file associated with user -->
    <Button
        style="@style/button"
        android:layout_above="@+id/send_message"
        android:text="@string/send_message"
        
        />
    
    
<!--     <EditText android:id="@+id/edit_message"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />
    <Button android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage" /> -->
    
</LinearLayout>